--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Olá seja bem-vindo!</h1>
-    <p>Sou Ewerton e curso Ciencia da Computação na Universidade Veiga de Almeida e esta página foi criada para a disciplina Aplicações de Internet</p>
+    <p>Sou Ewerton e curso Ciência da Computação na Universidade Veiga de Almeida e esta página foi criada para a disciplina Aplicações de Internet</p>
     <p>Minha Matrícula é 20141104662</p>
   </body>
 </html>
