--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h2>Sou Ewerton e curso Ciência da Computação na Universidade Veiga de Almeida</h2>
     <p>E esta página foi criada para a disciplina Aplicações de Internet</p>
     <p>Minha Matrícula é 20141104662</p>
+
+    <img src="imagens/stormtrooper.jpg" alt="Avatar" height="300" width="300" />
+
   </body>
 </html>
