--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scaled=1.0">
     <title>Ewerton Gomes de Lucena</title>
+    <link rel="stylesheet" type="text/css" href="estilos.css">
   </head>
   <body>
     <h1>Olá seja bem-vindo!</h1>
