--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
+<html lang="pt-br" style="font-size: 16px; overflow: hidden;" class="u-responsive-sm" data-lt-installed="true">
+    <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scaled=1.0">
     <title>Ewerton Gomes de Lucena</title>
