--- a/index.html
+++ b/index.html
@@ -5,15 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scaled=1.0">
     <title>Ewerton Gomes de Lucena</title>
-    <link rel="stylesheet" type="text/css" href="estilos.css">
+    <link rel="stylesheet" type="text/css" href="estilos.css"></link>
+    <style>
+      h1 {text-align: center;}
+      h2 {text-align: center;}
+      p {text-align: center;}
+      div {text-align: center;}
+
+      .image-cropper {
+      width: 300px;
+      height: 300px;
+      position: relative;
+      overflow: hidden;
+      border-radius: 50%;
+      }
+
+      img {
+      display: inline;
+      margin: 0 auto;
+      height: 100%;
+      width: auto;
+      }
+    </style>
   </head>
-  <body>
+ <body>
     <h1>Olá seja bem-vindo!</h1>
     <h2>Sou Ewerton e curso Ciência da Computação na Universidade Veiga de Almeida</h2>
     <p>E esta página foi criada para a disciplina Aplicações de Internet</p>
     <p>Minha Matrícula é 20141104662</p>
 
-    <img src="imagens/stormtrooper.jpg" alt="Avatar" height="300" width="300" />
+    <div class="image-cropper">
+      <img src="imagens/stormtrooper.jpg" class="rounded" />
+    </div>
 
   </body>
 </html>
