--- a/index.html
+++ b/index.html
@@ -3,30 +3,9 @@
     <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scaled=1.0">
+    <meta name="viewport" content="width=device-width, initial-scaled=1.0"></meta>
     <title>Ewerton Gomes de Lucena</title>
     <link rel="stylesheet" type="text/css" href="estilos.css"></link>
-    <style>
-      h1 {text-align: center;}
-      h2 {text-align: center;}
-      p {text-align: center;}
-      div {text-align: center;}
-
-      .image-cropper {
-      width: 300px;
-      height: 300px;
-      position: relative;
-      overflow: hidden;
-      border-radius: 50%;
-      }
-
-      img {
-      display: inline;
-      margin: 0 auto;
-      height: 100%;
-      width: auto;
-      }
-    </style>
   </head>
  <body>
     <h1>Olá seja bem-vindo!</h1>
