--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <title>Ewerton Gomes de Lucena</title>
     <link rel="stylesheet" type="text/css" href="estilos.css"></link>
   </head>
+  <nav>
+    <a class="logo" href="">
+    <h2 style="color: white">Menu</h2>
+  </a> 
+<div class="scrollbar" id="style-1">
+  <a href=" ">
+    <i class="fa fa-home fa-lg"></i>
+    <span class="nav-text">Home</span>
+  </a>
+
+  <a href=" ">
+    <i class="fa fa-user fa-lg"></i>
+    <span class="nav-text">Perfil</span>
+  </a>
+  
+  <a href=" ">
+      <i class="fa fa-envelope-o fa-lg"></i>
+      <span class="nav-text">E-mail</span>
+  </a>
+
+</div> 
+</nav>
  <body>
     <h1>Olá seja bem-vindo!</h1>
     <h2>Sou Ewerton e curso Ciência da Computação na Universidade Veiga de Almeida</h2>
