--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scaled=1.0"></meta>
     <title>Ewerton Gomes de Lucena</title>
     <link rel="stylesheet" type="text/css" href="estilos.css"></link>
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    
   </head>
   <nav>
     <a class="logo" href="">
