--- a/index.html
+++ b/index.html
@@ -37,14 +37,16 @@
 
 </div> 
 </nav>
- <body>
+ <body>    
+    <video id="videoBG" poster="poster.JPG" autoplay muted loop>
+    <source src="videos/pexels-mrcolo-7140928.mp4" type="video/mp4">
+    </video>
     <h1>Olá seja bem-vindo!</h1>
     <h2>Sou Ewerton e curso Ciência da Computação na Universidade Veiga de Almeida</h2>
     <p>E esta página foi criada para a disciplina Aplicações de Internet</p>
     <p>Minha Matrícula é 20141104662</p>
-
     <div class="image-cropper">
-      <img src="imagens/stormtrooper.jpg" class="rounded" />
+      <img src="imagens/selfie_trabalho.jpg" class="rounded" />
     </div>
 
   </body>
