Ajuste Vídeo Background

--- a/index.html
+++ b/index.html
@@ -15,38 +15,16 @@
     <meta name="theme-color" content="#ffffff">
     
   </head>
-  <nav>
-    <a class="logo" href="">
-    <h2 style="color: white">Menu</h2>
-  </a> 
-<div class="scrollbar" id="style-1">
-  <a href=" ">
-    <i class="fa fa-home fa-lg"></i>
-    <span class="nav-text">Home</span>
-  </a>
-
-  <a href=" ">
-    <i class="fa fa-user fa-lg"></i>
-    <span class="nav-text">Perfil</span>
-  </a>
-  
-  <a href=" ">
-      <i class="fa fa-envelope-o fa-lg"></i>
-      <span class="nav-text">E-mail</span>
-  </a>
-
-</div> 
-</nav>
  <body>    
-    <video id="videoBG" poster="poster.JPG" autoplay muted loop>
-    <source src="videos/pexels-mrcolo-7140928.mp4" type="video/mp4">
+    <video id="videoBG" autoplay muted loop>
+    <source src="videos/Pexels-Mrcolo-7140928 720_1.mp4" type="video/mp4">
     </video>
     <h1>Olá seja bem-vindo!</h1>
     <h2>Sou Ewerton e curso Ciência da Computação na Universidade Veiga de Almeida</h2>
     <p>E esta página foi criada para a disciplina Aplicações de Internet</p>
     <p>Minha Matrícula é 20141104662</p>
     <div class="image-cropper">
-      <img src="imagens/selfie_trabalho.jpg" class="rounded" />
+      <img src="imagens/selfie_trabalho.jpg" class="rounded"/>
     </div>
 
   </body>
