--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <video id="videoBG" autoplay muted loop>
     <source src="videos/Pexels-Mrcolo-7140928 720_1.mp4" type="video/mp4">
     </video>
+    <div class="image-cropper">
+      <img src="imagens/selfie_trabalho.jpg"/>
+    </div>
     <h1>Olá seja bem-vindo!</h1>
     <h2>Sou Ewerton e curso Ciência da Computação na Universidade Veiga de Almeida</h2>
     <p>E esta página foi criada para a disciplina Aplicações de Internet</p>
     <p>Minha Matrícula é 20141104662</p>
-    <div class="image-cropper">
-      <img src="imagens/selfie_trabalho.jpg" class="rounded"/>
-    </div>
+
 
   </body>
 </html>
