--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
     <video id="videoBG" autoplay muted loop>
     <source src="videos/Pexels-Mrcolo-7140928 720_1.mp4" type="video/mp4">
     </video>
+    <div class="grid-container"> 
+    <div class="item1">
     <div class="image-cropper">
       <img src="imagens/selfie_trabalho.jpg"/>
     </div>
+    </div>
+  </div>
     <h1>Olá seja bem-vindo!</h1>
     <h2>Sou Ewerton e curso Ciência da Computação na Universidade Veiga de Almeida</h2>
     <p>E esta página foi criada para a disciplina Aplicações de Internet</p>
