--- a/index.html
+++ b/index.html
@@ -20,17 +20,12 @@
     <source src="videos/Pexels-Mrcolo-7140928 720_1.mp4" type="video/mp4">
     </video>
     <div class="grid-container"> 
-      <div class="item1">
+      <div class="item">
       <div class="image-cropper">
-        <img src="imagens/selfie_trabalho.jpg"/>
-      </div>
-      </div>
-      </div>
-    <h1>Olá seja bem-vindo!</h1>
-    <h2>Sou Ewerton e curso Ciência da Computação na Universidade Veiga de Almeida</h2>
-    <p>E esta página foi criada para a disciplina Aplicações de Internet</p>
-    <p>Minha Matrícula é 20141104662</p>
-
-
+        <img src="imagens/selfie_trabalho.jpg"/></div></div>
+      <div class="item"><h1>Olá seja bem-vindo!</h1></div>
+    <div class="item"><h2>Sou Ewerton e curso Ciência da Computação na Universidade Veiga de Almeida</h2></div>
+    <div class="item"><p id="caixa_texto">E esta página foi criada para a disciplina Aplicações de Internet.<br>Minha Matrícula é 20141104662.</p></div>
+  </div>
   </body>
 </html>
