--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="imagens/selfie_trabalho.jpg"/></div></div>
       <div class="item"><h1>Olá seja bem-vindo!</h1></div>
     <div class="item"><h2>Sou Ewerton e curso Ciência da Computação na Universidade Veiga de Almeida</h2></div>
-    <div class="item"><p id="caixa_texto">E esta página foi criada para a disciplina Aplicações de Internet.<br>Minha Matrícula é 20141104662.</p></div>
+    <div class="item"><p id="caixa_texto">E esta página foi criada para a disciplina Aplicações de Internet lorem lorem lorem.<br>Minha Matrícula é 20141104662.</p></div>
   </div>
   </body>
 </html>
