--- a/index.html
+++ b/index.html
@@ -22,10 +22,22 @@
     <div class="grid-container"> 
       <div class="item">
       <div class="image-cropper">
-        <img src="imagens/selfie_trabalho.jpg"/></div></div>
-      <div class="item"><h1>Olá seja bem-vindo!</h1></div>
+        <img src="imagens/selfie_trabalho.jpg" alt="Foto Ewerton Lucena"/></div></div>
+    <div class="item">
+      <nav>
+        <a href="/index.html"><svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 42 42" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5.52 19c.64-2.2 1.84-3 3.22-3h6.52c1.38 0 2.58.8 3.22 3"/><circle cx="12" cy="10" r="3"/><circle cx="12" cy="12" r="10"/></svg></a>
+        <a href="https://www.linkedin.com/in/ewertonlucena/"><svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 42 42" class="global-nav__logo">
+          <title>
+            LinkedIn
+          </title>
+          <g>
+            <path d="M34,2.5v29A2.5,2.5,0,0,1,31.5,34H2.5A2.5,2.5,0,0,1,0,31.5V2.5A2.5,2.5,0,0,1,2.5,0h29A2.5,2.5,0,0,1,34,2.5ZM10,13H5V29h5Zm.45-5.5A2.88,2.88,0,0,0,7.59,4.6H7.5a2.9,2.9,0,0,0,0,5.8h0a2.88,2.88,0,0,0,2.95-2.81ZM29,19.28c0-4.81-3.06-6.68-6.1-6.68a5.7,5.7,0,0,0-5.06,2.58H17.7V13H13V29h5V20.49a3.32,3.32,0,0,1,3-3.58h.19c1.59,0,2.77,1,2.77,3.52V29h5Z" fill= "white"></path>
+          </g>
+        </svg></a>
+    </nav></div>   
+    <div class="item"><h1>Olá seja bem-vindo!</h1></div>
     <div class="item"><h2>Sou Ewerton e curso Ciência da Computação na Universidade Veiga de Almeida</h2></div>
-    <div class="item"><p id="caixa_texto">E esta página foi criada para a disciplina Aplicações de Internet lorem lorem lorem.<br>Minha Matrícula é 20141104662.</p></div>
+    <div class="item"><p id="caixa_texto">E esta página foi criada para a disciplina Aplicações de Internet.<br>Minha Matrícula é 20141104662.</p></div>
   </div>
   </body>
 </html>
