--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
           <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
           <title>Linkedin</title></svg></a>
     </nav></div>   
-    <div class="item"><h1>Ewerton Gomes de Lucena</h1><h3>Solteiro, 28 anos - Rio de Janeiro, Brasil</h3></div>
+    <div class="item"><p><h1>Ewerton Gomes de Lucena</h1></p><p><h3>Solteiro, 28 anos - Rio de Janeiro, Brasil</h3></p></div>
     <div class="item"><p id="caixa_texto">Apaixonado por tecnologia e em resolução de problemas.</p></div>
   </div>
   </body>
+  <footer>
+    <p>feito por:Ewerton Lucena | 2021 | <a href="mailto:ewerton.lucena@hotmail.com">ewerton.lucena@hotmail.com</a></p>
+  </footer>
 </html>
