--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
   </div>
   </body>
   <footer>
-    <p>feito por:Ewerton Lucena | 2021 | <a href="mailto:ewerton.lucena@hotmail.com">ewerton.lucena@hotmail.com</a></p>
+    <p>2021 | <a href="mailto:ewerton.lucena@hotmail.com">ewerton.lucena@hotmail.com</a></p>
   </footer>
 </html>
