--- a/loja.html
+++ b/loja.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scaled=1.0"></meta>
-    <link rel="stylesheet" type="text/css" href="estilos.css"></link>
+    <link rel="stylesheet" type="text/css" href="estilosloja.css"></link>
     <title>Mega Camisas</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/faviconloja/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/faviconloja/favicon-32x32.png">
@@ -26,6 +26,6 @@
   </div>
   </body>
   <footer>
-    <p>feito por:Ewerton Lucena | 2021 | <a href="mailto:ewerton.lucena@hotmail.com">ewerton.lucena@hotmail.com</a></p>
+    <p>Desenvolvido por: <a href="http://ewelucena.tk/index.html">Ewerton Lucena</a> | 2021 | <a href="mailto:ewerton.lucena@hotmail.com">ewerton.lucena@hotmail.com</a></p>
   </footer>
 </html>
