--- a/loja/index.html
+++ b/loja/index.html
@@ -40,10 +40,12 @@
     <h1>Seja Bem-vindo!</h1>
     </div>
     <div class="item"><p>Nós somos a Mega Camisas, loja especializada em camisas gamer. Levando a moda que você gosta dos consoles para você!</p></div>
-    <div class="item">
-      <video width="520" height="480" autoplay>
-      <source src="/videos/video_propaganda_loja.mp4" type="video/mp4">
+    <div class="grid-container">
+      <div class="item">
+      <video width="800" height=auto autoplay loop>
+      <source src="/videos/video_propaganda_loja_25compress.mp4" type="video/mp4">
       </video>
+    </div></div>
     </div>
   </body>
   <footer>
