--- a/loja/index.html
+++ b/loja/index.html
@@ -44,6 +44,7 @@
       <div class="item">
       <video width="800" height=auto autoplay loop>
       <source src="/videos/video_propaganda_loja_25compress.mp4" type="video/mp4">
+      Seu navegador não suporta este vídeo.
       </video>
     </div></div>
     </div>
