--- a/loja/localizacao.html
+++ b/loja/localizacao.html
@@ -37,8 +37,9 @@
         <title>Contato</title></svg></a>
     </nav></div>
     <div class="grid-container">
+      <div class="item"><h1>Endereço</h1><p>R. Ibituruna, 108 - Maracanã, Rio de Janeiro - RJ, 20271-020</p> </div>
     <div class="item">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7350.433670365243!2d-43.18345517649065!3d-22.905371707168438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997f0fb88cb651%3A0x943c9e7c4110a5c5!2sEdif%C3%ADcio%20Central!5e0!3m2!1spt-BR!2sbr!4v1638131796738!5m2!1spt-BR!2sbr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.042237329596!2d-43.22352338255617!3d-22.911812899999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997e57963eedf3%3A0xaf52199fd71ffebb!2sUniversidade%20Veiga%20de%20Almeida!5e0!3m2!1spt-BR!2sbr!4v1638131941114!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div></div>
   </body>
   <footer>
