--- a/loja/index.html
+++ b/loja/index.html
@@ -39,7 +39,7 @@
     <div class="item">
     <h1>Seja Bem-vindo!</h1>
     </div>
-    <div class="item"><p>Nós somos a Mega Camisas, loja especializada em camisas gamer. Levando a moda que você gosta dos consoles para você!</p></div>
+    <div class="item"><p>Nós somos a Mega Camisas, loja especializada em camisas gamer.<br>Levando a moda que você gosta dos consoles para você!</p></div>
     <div class="grid-container">
       <div class="item">
       <video width="800" height=auto autoplay loop>
