--- a/loja/contato.html
+++ b/loja/contato.html
@@ -40,6 +40,8 @@
     <div class="item">
       <h1>Entre em contato conosco!</h1>
       <p>Ligue para <br><b>Telefone:</b> (21) 2574-8888</p>
+    </div><div class="item">
+      
     </div>
     </div>
   </body>
