--- a/loja/index.html
+++ b/loja/index.html
@@ -50,6 +50,6 @@
     </div>
   </body>
   <footer>
-    <p>Desenvolvido por: <a href="http://ewelucena.tk/index.html">Ewerton Lucena</a> | 2021 | <a href="mailto:ewerton.lucena@hotmail.com">ewerton.lucena@hotmail.com</a></p>
+    <p>Desenvolvido por: <a href="http://ewelucena.tk/index.html">Ewerton Lucena</a> | 2021 | <a href="https://www.linkedin.com/in/ewertonlucena">LinkedIn</a></p>
   </footer>
 </html>
