--- a/loja/localizacao.html
+++ b/loja/localizacao.html
@@ -43,6 +43,6 @@
     </div></div>
   </body>
   <footer>
-    <p>Desenvolvido por: <a href="http://ewelucena.tk/index.html">Ewerton Lucena</a> | 2021 | <a href="mailto:ewerton.lucena@hotmail.com">ewerton.lucena@hotmail.com</a></p>
+    <p>Desenvolvido por: <a href="http://ewelucena.tk/index.html">Ewerton Lucena</a> | 2021 | <a href="https://www.linkedin.com/in/ewertonlucena">LinkedIn</a></p>
   </footer>
 </html>
