Ajuste de Produtos

--- a/loja/produtos.html
+++ b/loja/produtos.html
@@ -60,38 +60,38 @@
           <td>R$ 39,90</td>
         </tr>
         <tr>
-          <td class="vitrine"><img src="/imagens/loja/produtos/camisa_streetsofrage1.jpg" alt="Camisa Sonic 1"></td>
+          <td class="vitrine"><img src="/imagens/loja/produtos/camisa_alteredbeast.jpg" alt="Camisa Altered Beast"></td>
+          <td>Camisa Altered Beast</td>
+          <td>R$ 49,90</td>
+        </tr>
+        <tr>
+          <td class="vitrine"><img src="/imagens/loja/produtos/camisa_goldenaxe.jpg" alt="Camisa Golden Axe"></td>
+          <td>Camisa Golden Axe</td>
+          <td>R$ 49,90</td>
+        </tr>
+        <tr>
+          <td class="vitrine"><img src="/imagens/loja/produtos/casaco_megadrive.jpg" alt="Casaco Mega Drive"></td>
+          <td>Casaco Mega Drive</td>
+          <td>R$ 89,90</td>
+        </tr>
+        <tr>
+          <td class="vitrine"><img src="/imagens/loja/produtos/camisa_shinobi.jpg" alt="Camisa Shinobi"></td>
+          <td>Camisa Shinobi</td>
+          <td>R$ 49,90</td>
+        </tr>
+        <tr>
+          <td class="vitrine"><img src="/imagens/loja/produtos/camisa_sonicartwork.jpg" alt="Camisa Sonic Artwork"></td>
+          <td>Camisa Sonic Artwork</td>
+          <td>R$ 59,90</td>
+        </tr>
+        <tr>
+          <td class="vitrine"><img src="/imagens/loja/produtos/camisa_megadrive.jpg" alt="Camisa Mega Drive"></td>
           <td>Camisa Streets Of Rage 1 - USA Cover</td>
           <td>R$ 49,90</td>
         </tr>
         <tr>
-          <td class="vitrine"><img src="/imagens/loja/produtos/camisa_streetsofrage1.jpg" alt="Camisa Sonic 1"></td>
-          <td>Camisa Streets Of Rage 1 - USA Cover</td>
-          <td>R$ 49,90</td>
-        </tr>
-        <tr>
-          <td class="vitrine"><img src="/imagens/loja/produtos/camisa_streetsofrage1.jpg" alt="Camisa Sonic 1"></td>
-          <td>Camisa Streets Of Rage 1 - USA Cover</td>
-          <td>R$ 49,90</td>
-        </tr>
-        <tr>
-          <td class="vitrine"><img src="/imagens/loja/produtos/camisa_streetsofrage1.jpg" alt="Camisa Sonic 1"></td>
-          <td>Camisa Streets Of Rage 1 - USA Cover</td>
-          <td>R$ 49,90</td>
-        </tr>
-        <tr>
-          <td class="vitrine"><img src="/imagens/loja/produtos/camisa_streetsofrage1.jpg" alt="Camisa Sonic 1"></td>
-          <td>Camisa Streets Of Rage 1 - USA Cover</td>
-          <td>R$ 49,90</td>
-        </tr>
-        <tr>
-          <td class="vitrine"><img src="/imagens/loja/produtos/camisa_streetsofrage1.jpg" alt="Camisa Sonic 1"></td>
-          <td>Camisa Streets Of Rage 1 - USA Cover</td>
-          <td>R$ 49,90</td>
-        </tr>
-        <tr>
-          <td class="vitrine"><img src="/imagens/loja/produtos/camisa_streetsofrage1.jpg" alt="Camisa Sonic 1"></td>
-          <td>template</td>
+          <td class="vitrine"><img src="/imagens/loja/produtos/camisa_ghostsngoblins.jpg" alt="Camisa Ghosts N' Goblins"></td>
+          <td>Camisa Ghosts N' Goblins</td>
           <td>R$ 49,90</td>
         </tr>
       </table>
