--- a/loja/novidades.html
+++ b/loja/novidades.html
@@ -37,6 +37,9 @@
         <title>Contato</title></svg></a>
     </nav></div>
     <div class="item">
+      <h1>Confira nossas novidades!</h1>
+    </div>
+    <div class="item">
       <div class="slideshow-container">
 
         <div class="mySlides fade">
