--- a/loja/novidades.html
+++ b/loja/novidades.html
@@ -45,7 +45,7 @@
         <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
           <a href="/loja/produtos.html">
-          <img src="/imagens/loja/LOGO.png" style="width:100%">
+          <img src="/imagens/loja/novidade1.jpg" style="width:100%">
           </a>
           <div class="text"></div>
         </div>
