--- a/loja/produtos.html
+++ b/loja/produtos.html
@@ -86,7 +86,7 @@
         </tr>
         <tr>
           <td class="vitrine"><img src="/imagens/loja/produtos/camisa_megadrive.jpg" alt="Camisa Mega Drive"></td>
-          <td>Camisa Streets Of Rage 1 - USA Cover</td>
+          <td>Camisa Mega Drive</td>
           <td>R$ 49,90</td>
         </tr>
         <tr>
