--- a/loja/novidades.html
+++ b/loja/novidades.html
@@ -46,6 +46,7 @@
           <div class="numbertext">1 / 3</div>
           <a href="/loja/produtos.html">
           <img src="/imagens/loja/novidade1.jpg" style="width:100%">
+          <div class="text">Em Breve Abriremos Loja Física!</div>
           </a>
           <div class="text"></div>
         </div>
