--- a/loja/novidades.html
+++ b/loja/novidades.html
@@ -54,7 +54,8 @@
         <div class="mySlides fade">
           <div class="numbertext">2 / 3</div>
           <a href="/loja/produtos.html">
-            <img src="/imagens/loja/LOGO.png" style="width:100%">
+            <img src="/imagens/loja/novidade2.jpg" style="width:100%">
+            <div class="text">Em Breve Promoções de Natal!</div>
           </a>
           <div class="text"></div>
         </div>
