--- a/loja/novidades.html
+++ b/loja/novidades.html
@@ -64,6 +64,7 @@
           <div class="numbertext">3 / 3</div>
           <a href="/loja/produtos.html">
             <img src="/imagens/loja/LOGO.png" style="width:100%">
+            <div class="text">Mais Novidades Aguarde...</div>
           </a>
           <div class="text"></div>
         </div>
