--- a/loja/novidades.html
+++ b/loja/novidades.html
@@ -63,8 +63,7 @@
         <div class="mySlides fade">
           <div class="numbertext">3 / 3</div>
           <a href="/loja/produtos.html">
-            <img src="/imagens/loja/LOGO.png" style="width:100%">
-            <div class="text">Mais Novidades Aguarde...</div>
+            <img src="/imagens/loja/novidades3.jpg" style="width:100%">
           </a>
           <div class="text"></div>
         </div>
